# Gitlab-Aritfact-Download

./: .gitattributes  CMakeLists.txt  README.md  config.json  package-lock.json  vcpkg.json
config/: config.json
include/: ConfigManager.h  FileManager.h  GitLabService.h
public/: index.html  script.js
src/: CMakeLists.txt  ConfigManager.cpp  FileManager.cpp  GitLabService.cpp  main.cpp
